++Toppings Index and js file, updated layout

--- a/PizzaPros/PizzaPros/PizzaPros.csproj
+++ b/PizzaPros/PizzaPros/PizzaPros.csproj
@@ -24,6 +24,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Pages\Admin\ToppingType\" />
     <Folder Include="Pages\Customer\Home\" />
     <Folder Include="Pages\Customer\Cart\" />
   </ItemGroup>
