++PizzaType Controller,VM,Index,Upsert, js

--- a/PizzaPros/PizzaPros/PizzaPros.csproj
+++ b/PizzaPros/PizzaPros/PizzaPros.csproj
@@ -26,6 +26,7 @@
   <ItemGroup>
     <Folder Include="Pages\Customer\Home\" />
     <Folder Include="Pages\Customer\Cart\" />
+    <Folder Include="wwwroot\images\pizzaTypes\" />
   </ItemGroup>
 
 </Project>
